# VisionForge

./: .gitignore  .gitmodules  CMakeLists.txt  OpenGLEngine.sln  README.md  gmon.out
OpenGLEngine/: OpenGLEngine.cpp  OpenGLEngine.vcxproj  OpenGLEngine.vcxproj.filters  camera.h  engine.h  object.h  window.h
OpenGLEngine/include/: camera.h  engine.h  init.h  light.h  mesh.h  model.h  object.h  physics.h  scene_manager.h  shader.h  texture.h  window.h
OpenGLEngine/shaders/: cube.frag  cube.vert  shader.frag  shader.vert  skybox.frag  skybox.vert
OpenGLEngine/src/: Engine.cpp  Model.cpp  OpenGLEngine.cpp  PhysDebug.cpp
cmake/: Config.cmake.in
editor/: CMakeLists.txt
editor/include/: GameClass.hpp
editor/src/: editor.cpp
include/: CameraComponent.h  CameraEntity.h  Engine.h  Entity.hpp  Shader.h  Timer.hpp  assimp-vc142-mt.lib  camera.h  collection.hpp  component.hpp  engine.h  entity.hpp  framebuffer.hpp  init.h  light.h  lightManager.hpp  lighting.hpp  material.hpp  mesh.h  mesh.hpp  mesh_model.h  model.h  modelManager.hpp  object.hpp  physDebug.hpp  scene_manager.h  shader.h  shadow.hpp  shape.hpp  ssbo.hpp  texture.h  window.h
include/VisionForge/Common/: Common.hpp  Event.hpp  Global.hpp  InputManager.hpp  Texture.hpp
include/VisionForge/Engine/: Configuration.hpp  Engine.hpp  Environment.hpp  GameClass.hpp  LightManager.hpp  Material.hpp  Mesh.hpp  Object.hpp  PostProcessing.hpp  SceneManager.hpp  Shadow.hpp  ShadowManager.hpp  Shape.hpp  Skybox.hpp  Terrain.hpp
include/VisionForge/Engine/Environment/: Sun.hpp
include/VisionForge/Engine/PostProc/: Blur.hpp  Sun.hpp
include/VisionForge/EntitySystem/: Component.hpp  Entity.hpp  IEntitySystem.hpp  VisualComponent.hpp
include/VisionForge/EntitySystem/Components/: CameraInterface.hpp  ShadowInterface.hpp
include/VisionForge/EntitySystem/DefaulComponents/: CameraComponent.hpp  LightComponent.hpp  ModelComponent.hpp  ShadowComponent.hpp
include/VisionForge/System/: Framebuffer.hpp  Shader.hpp  Shadow.hpp  Ssbo.hpp  System.hpp  SystemConfig.hpp  Window.hpp
include/assimp/: camera.h  types.h
include/assimp/Compiler/: pstdint.h
lib/: jsoncpp.lib
logs/: basic.txt
shaders/: blur.frag  configHDR.frag  configHDR.vert  envir.frag  hdr.frag  postproc.frag  postproc.vert  prefilter.frag  shader.frag  shader.vert  shadow.frag  shadow.geom  shadow.vert
src/: Blur.cpp  CameraComponent.cpp  Common.cpp  Engine.cpp  Environment.cpp  FrameBuffer.cpp  GameEngine.cpp  InputManager.cpp  LightComponent.cpp  Mesh.cpp  Model.cpp  ModelComponent.cpp  Object.cpp  PostProcessing.cpp  Shader.cpp  ShadowComponent.cpp  ShadowManager.cpp  Shape.cpp  Skybox.cpp  Sun.cpp  System.cpp  Window.cpp  main.cpp
test/: Entity.test.h  GameClass.hpp  Model.test.h  login.h  main.cpp
test/DOOM_E1M1/: doom_E1M1.mtl
test/GuiTest/: main.cpp
